added host to swagger
